# nnhAnalysis

./: .clang-format  .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  README.md  channels.json
analysis/exec/: prepareForBDT.cxx
analysis/include/: Channels.hh
analysis/python/: launchBDT_WW.py  launchBDT_bb.py
include/: EventShape.h  NNHProcessor.hh  ParticleInfo.hh
miniDSTMaker/: MiniDST.py  README.md  Transfer.py  downloadAndMiniDst.py  mini-DST-maker.xml
miniDSTMaker/2q250_v4_p00_ildl5/: 2q250_v04_p00_ildl5_c0_bdt.class.C  2q250_v04_p00_ildl5_c1_bdt.class.C  2q250_v04_p00_ildl5_c2_bdt.class.C  2q250_v04_p00_ildl5_c3_bdt.class.C
miniDSTMaker/lfns/: 402001.lfns  402002.lfns  402003.lfns  402004.lfns  402005.lfns  402006.lfns  402007.lfns  402008.lfns  402009.lfns  402010.lfns  402011.lfns  402012.lfns  402013.lfns  402014.lfns  402173.lfns  402176.lfns  402182.lfns  402185.lfns  500006.lfns  500008.lfns  500012.lfns  500062.lfns  500064.lfns  500066.lfns  500068.lfns  500070.lfns  500072.lfns  500074.lfns  500076.lfns  500078.lfns  500080.lfns  500082.lfns  500084.lfns  500086.lfns  500088.lfns  500090.lfns  500092.lfns  500094.lfns  500096.lfns  500098.lfns  (+25 more)
processor/: CMakeLists.txt  README.md
processor/include/: EventShape.hh
processor/script/: NNHProcessor.py  Observer.py  launchNNHProcessor.py  setEnv.sh
processor/src/: NNHProcessor.cc
script/: Merge.py  NNHProcessor.py  NNH_steer.xml  Transfer.py  launchNNHProcessor.py
src/: EventShape.cc  NNHProcessor.cc
